<resources>
    <string name="app_name">Храм Тихвинской иконы Божьей матери</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="icon">Тихвинская Божья матерь</string>
    <string name="iconograf">Иконография</string>
    <string name="mol">Молитвы</string>
    <string name="hram">Храм</string>
    <string name="tihvin0">"Храм Тихвинской иконы Божьей матери"</string>
    <string name="kazan">"Казанско-Богородицкая церковь"</string>
    <string name="title_section1">Alicante</string>
    <string name="title_section2">Barcelona</string>

    <string name="text">Одна из особо почитаемых на Руси святынь. Считается, что этот образ был создан святым евангелистом Лукой при жизни Пресвятой Богородицы. До XIV века икона находилась в Константинополе, пока в 1383 году неожиданно не исчезла из Влахернского храма. Согласно летописи, в этом же году на Руси икона явилась перед рыбаками на Ладожском озере близ города Тихвина.

В древних летописях описано, как в 1383 году над водами озера в лучезарном свете явилась икона Божией Матери с Богомладенцем на руках, переносимая неведомою силою по воздуху. Несколько раз икона опускалась на землю, но после того, как на этом месте начиналось строительство храма, икона вновь чудесным образом перемещалась, пока не остановилась в болотистом месте близ Тихвина.

С радостью приступил народ к строительству храма на месте, окончательно выбранном Богородицей для пребывания Её иконы. Впоследствии на этом месте был выстроен каменный храм, а затем устроен Тихвинский Богородице-Успенский мужской монастырь.

Перед Тихвинской иконой совершилось много чудес и исцелений, не раз спасала она Тихвинскую обитель от шведов, осаждавших монастырь в течение трёх лет, с 1613 по 1615 год. Всякий раз по молитвам отчаявшихся защитников Пресвятая Богородица своим заступничеством помогала им обращать в бегство в несколько раз превышающие силы противника. С тех пор икона считается покровительницей северо-западных земель России.

В 1944 году будущий архиепископ Чикагский и Миннеаполисский Иоанн (Гарклавс) и мирянин по имени Сергий (впоследствии его приёмный сын), спасая чудотворный образ, увезли его в Европу, а затем – в США. Перед своей кончиной в 1982 году архиепископ Иоанн завещал своему приёмному сыну, протоиерею Сергию Гарклавсу, заботиться об иконе и вернуть её России тогда, когда в стране изменится отношение светской власти к Церкви и будет восстановлен Тихвинский монастырь. Торжественное возвращение святыни произошло в июне 2004 года.

День празднования: 9 июля (26 июня по старому стилю).</string>

      <string name="tihvin1">Деревянную церковь без колокольни в селе Языково построили на средства подполковника Дмитрия Фёдоровича Апраксина в 1766 году. В ней имелись три придела: в честь Казанской ико­ны Божьей Матери, Святителя Николая Чудотворца и Иоанна Крестителя. Служили в церкви священник, дьячок, пономарь. В 1824 году был определён диакон. Во владении служителей церкви находилось 33 десятины пахотной и сенокосной земли.

В 1869 году «тщанием» помещика Александра Шишкова при содействии прихожан возвели тёплый каменный храм с такой же колокольней в три яруса. Храм, вместимостью до 900 человек, окружала каменная с деревянным штакетником ограда. В церкви имелись также три престола с теми же названиями. Штат по указу Святейшего Синода от 4 марта 1885 года состоял из священника, диакона, псаломщика. В 1912 году приход владел 35 с половиной де­сятинами земли.

К храму была приписана церковь в честь Тихвинской иконы Божьей Матери.

 </string>

     <string name="tihvin2">Тихвинская церковь в селе Языково Борского района, Самарской области каменная однопрестольная во имя Тихвинской иконы Божьей Матери церковь без колокольни была построена «тща­нием» помещицы Марии Алексеевны Шишковой. По окончании строительства, начатой кладкой 26 июня 1847 года, церковь освя­тил 26 июня 1851 года епископ Самарский и Ставропольский Евсевий. Одноглавая церковь вмещала до 150 человек. Возвели её на усадьбе Марии Алексеевны Шишковой, которая затем стала принадлежать Ольге Григорьевне Аксаковой.

В 30-е годы, возможно, обе церкви были разобраны. 7 сентября 1936 года Петровский райисполком своим постановлением обязал районный финансовый отдел «оформить материалы о продаже стройматериала от Языковской церкви (какой? — неизвестно) для строи­тельства районной больницы по цене из расчета 30 руб. за одну ты­сячу штук кирпича, бурового камня 6 руб. за один камень».

В 2003 году при поддержке администрации района трудами председателя колхоза А.И. Белякова Белякови многих сельчан началось строительство церкви в честь Казанской иконы Пресвятой Богородицы. В 2006 году благочинным игуменом Ананием был освящён первый колокол (вес 65 кг), поднятый на колокольню. Изготовили его на Самарском предприятии и куплен на колхозные деньги за 26 тысяч рублей.

 </string>
</resources>
