<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_icon"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/icon" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/iconograf" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/mol" />
        <item
            android:id="@+id/nav_hram"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/hram" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_share"
            android:title="Share" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_send"
            android:title="Send" />
    </group>



        </menu>

