<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pew="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.fmsirvent.ParallaxEverywhere.PEWImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"

                android:scaleType="centerCrop"
                android:src="@drawable/embed_asset"
                pew:reverse="reverseX"/>

            <com.fmsirvent.ParallaxEverywhere.PEWTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="bottom|center_horizontal"
                android:text="@string/kazan"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                pew:block_parallax_x="true"
                pew:parallax_x="160dp"
                pew:parallax_y="160dp"
                pew:reverse="reverseX"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tihvin1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/tihvin2" />


        </LinearLayout>




            <com.fmsirvent.ParallaxEverywhere.PEWImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:scaleType="centerCrop"
                android:src="@drawable/embed_asset"
                pew:reverse="reverseY" />

        </LinearLayout>


</ScrollView>
